add separate endpoints for each type of coal
